--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -107,19 +107,21 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_searching"
             android:layout_width="200dp"
-            android:layout_height="36dp"
+            android:layout_height="50dp"
             android:layout_marginStart="100dp"
             app:layout_constraintBottom_toBottomOf="@+id/cl_filter"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/cl_filter">
 
-            <MultiAutoCompleteTextView
+            <AutoCompleteTextView
                 android:id="@+id/tv_autocomplete_search"
                 android:layout_width="match_parent"
-                android:layout_height="36dp"
+                android:layout_height="50dp"
                 android:completionThreshold="1"
                 android:hint="@string/suchbegriff"
+                android:completionHint="Suche nach Streamernamen"
                 android:inputType="text"
+                android:maxLines="1"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -237,7 +239,6 @@
                     app:layout_constraintVertical_bias="0.5" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
