--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,13 +81,11 @@
             android:id="@+id/cl_navBar"
             android:layout_width="match_parent"
             android:layout_height="70dp"
+            android:background="@color/btn_luckyv_yellow"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            android:background="@color/btn_luckyv_yellow"
-            app:layout_constraintTop_toBottomOf="@+id/cl_home_fragment"
-            app:layout_constraintVertical_bias="1.0">
+            app:layout_constraintStart_toStartOf="parent">
 
             <!--            android:visibility="invisible"-->
 
