--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,6 +9,14 @@
     </data>
 
     <!--    todo: für "streamers live" grünen fleck & für "streamers offline" roten fleck-->
+    <!--    todo: wenn tastatur eingeblendet, blende navBar aus-->
+    <!--    todo: AutoCompleteTextView überarbeiten-->
+    <!--    todo: Filter-Button aktivieren-->
+    <!--    todo: Home-Button aktivieren-->
+    <!--    todo: Favoriten-Button aktivieren-->
+    <!--    todo: FilterFragment erstellen-->
+    <!--    todo: Settings-Button aktivieren-->
+    <!--    todo: SettingsFragment erstellen-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/homeFragment"
@@ -118,9 +126,9 @@
                 android:id="@+id/tv_autocomplete_search"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:completionHint="Suche nach Streamernamen"
                 android:completionThreshold="1"
                 android:hint="@string/suchbegriff"
-                android:completionHint="Suche nach Streamernamen"
                 android:inputType="text"
                 android:maxLines="1"
                 android:textSize="14sp"
@@ -191,7 +199,7 @@
                 android:id="@+id/tv_streamers_offline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:text="@string/streamers_offline"
                 android:textSize="15sp"
