--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -29,10 +29,14 @@
             android:id="@+id/rv_favorites"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="16dp"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_fragment_header"/>
+            app:layout_constraintTop_toBottomOf="@+id/tv_fragment_header"
+            app:spanCount="3"
+            tools:listitem="@layout/list_item_offline" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
