--- a/app/src/main/res/layout/list_item_offline.xml
+++ b/app/src/main/res/layout/list_item_offline.xml
@@ -101,6 +101,18 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_favorites"
+            android:layout_width="20sp"
+            android:layout_height="20sp"
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="70dp"
+            android:clickable="true"
+            android:text="Favorisieren"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
